# M4D

./: .gitignore  CLAUDE.md  Cargo.toml  PAPER.command  daily_hunt.sh  go copy 2.sh  go.sh  go3d.sh  go4d.sh  go500.sh  go5000.sh  go5d.sh  god.sh  gort.sh  gou.sh  ibkr.sh  ibkr_loop.sh
AGENT/: AGENTS.md  AGENT_TEAMS.md  ALGO-ONBOARD-PROTOCOL.md  ALPHA-SEARCH-DAILY.md  AWARENESS.md  BUILD-LIST-SHARPE-PRIORITY.md  BUILDOUT-PROGRESS.md  CHANGELOG_AI.md  CLAUDE-AGENT-PLAN.md  COUNCIL.md  DISTILL-LIST.md  EXPERT-TRADER-COUNCIL.MD  ICT-COTRADING-SYSTEM.md  ICT-NEXT-TARGETS.md  ICT-TARGET-BRAIN.md  IOPT-STATUS-CURSOR.MD  M2D-BRIEF.md  M3D-BRIEF.md  M4D-BRIEF.md  NORTH-STAR.md  OOO.md  ORB-DIMENSION-MAP.md  README.md  SAFETY.md  SIGNAL-RETIRE-RULE.md  SIGNAL-STACK-ARCHITECTURE.md  SOLO-ORB-MANUAL.md  SPEC-PP.md  SYS-MAP.md  SYSTEM-MAP.md  SYSTEM-SPEC.md  TV-INDICATORS-SYNTHESIS.MD  TV-PINE-TEMPLATES.pine  TWS-OPS.md
APP-DOC/: AI-SUMMARY.MD  signal_discovery_full_spec.html
DOCS/: AGENT-DOC-LIST.MD  DATA-SOURCES.md  GROK_PAYLOAD_REFERENCE.md  ICT-TSX-OC.md  M4D-UI-STYLE-CONTROLS-PLAN.md  ORACLE_PLAN.md  SESSION-STATE.MD
M1D/: .gitignore  README.md  index.html  package.json
M2D/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
M4D/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
M5D/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
M6D/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
MRT/: .gitignore  Cargo.toml  gort.sh
MRT/mrt-api/: Cargo.toml
MRT/mrt-api/src/: main.rs  replay.rs
MRT/mrt-processor/: Cargo.toml
MRT/mrt-processor/src/: main.rs
W3D/: index.html  package-lock.json  package.json  vite.config.ts
W4D/: W4D.md
api/: Cargo.toml
api/src/: main.rs  models.rs  scanner.rs  state.rs
api/src/routes/: algo_day.rs  assets.rs  audit.rs  backtest.rs  council.rs  cryptobot.rs  health.rs  mod.rs  scanner.rs
api/src/ws/: algo.rs  mod.rs  scanner.rs
ds/: DELTA_OPS_IOPT_SPEC.md  daily_hunt.sh  grok_pulse.py  manage.py  requirements.txt
engine/: Cargo.toml
engine/src/: fetcher.rs  main.rs  processor.rs  store.rs
engine/src/algos/: mod.rs
engine/src/algos-TEMP/: alpha_imbalance.rs  casper_ifvg.rs  celtic_cross.rs  dark_pool.rs  dragonfly_vol.rs  emerald_flow.rs  gallowglass_ob.rs  ict_weekly_fvg.rs  mod.rs  niall_spike.rs  stub.rs  ttrades_fractal.rs  vega_trap.rs  volkov_keltner.rs  weinstein_stage.rs  wolfhound.rs  wyckoff_spring.rs
indicators/: boom3d-tech.ts
m4d-api/: Cargo.toml  README.md
m4d-api/src/: binance_ingest.rs  index_page.html  main.rs  opt_page.html  ws_bridge.rs
m4d-ds/: crypto_worker.py  manage.py  requirements.txt
m4d-engine/: Cargo.toml  README.md
m4d-engine/fixtures/: sample_bars.csv
m4d-engine/src/: backtest.rs  bank.rs  bar.rs  error.rs  lib.rs  load.rs  runner.rs  sqlite_export.rs  vote.rs
m4d-engine/src/algos/: banshee_squeeze.rs  cyber_ict.rs  eight_ema.rs  harmonic_lens.rs  high_king.rs  market_shift.rs  minervini_vcp.rs  oneil_breakout.rs  rayner_trend.rs  registry.rs  renko_vault.rs  stockbee_ep.rs  stone_anchor.rs
m4d-engine/src/indicators/: mod.rs  series.rs
m5d/: package-lock.json  package.json  vite.config.ts
pwa/: .env.example  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
site/: index.html  package-lock.json  package.json  vite.config.ts
zzz/: go copy 2.sh  go.iter.sh  go3w.sh  (+4 more)
(+600 files in other folders)
