[package]
name = "m4d-api"
version = "0.1.0"
edition = "2021"
description = "HTTP API for m4d-engine outputs (algo_day, votes) — feeds MISSION control room"

[workspace]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
