[package]
name = "m4d-engine"
version = "0.1.0"
edition = "2021"
description = "M4D historic bar loader, algo walk-forward processor, JSON feed for charts/MISSION, simple backtest"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "m4d-processor"
path = "src/bin/m4d-processor.rs"
