[package]
name = "mrt-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mrt-processor"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
